<resources>
    <string name="app_name">Zamów cukierki</string>
    <string name="hello_world">Zamów cukierki</string>
    <string name="menu_settings">Zamów cukierki</string>

    <string name="TekstLogin">Login:</string>
    <string name="TekstPrzyklad">admin....</string>
    <string name="TekstHaslo">Haslo:</string>
    <string name="TekstButtonLogin">Zaloguj</string>
    <string name="TekstButtonRegister">Zarejestruj</string>
    <string name="TekstButtonPlus1">+1</string>
    <string name="TekstButtonMinus1">-1</string>
    <string name="TekstButtonZamow">Złóż zamówienie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="TekstZalogowany">Zalogowany jako:</string>
    <string name="TekstNiezalogowany">Niezalogowany</string>
    <string name="action_settings">Settings</string>
</resources>
